<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_bg"
    android:gravity="center">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pm_login_title"
        android:textColor="@color/app_white"
        android:textSize="36sp"
        android:layout_marginBottom="60dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pm_login_des"
        android:textSize="14sp"
        android:layout_marginBottom="30dp"
        android:textColor="@color/app_white"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        >
        <com.nearor.commonui.widget.AppEditText
            android:id="@+id/et_login_phone"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:hint="@string/pm_login_phone"
            android:paddingLeft="10dp"
            android:inputType="phone"
            android:maxLength="11"
            android:textColor="@color/app_white"
            android:textColorHint="@color/app_white"
            android:imeOptions="actionNext"
            android:background="@drawable/login_edittext_style_top"/>
        <com.nearor.commonui.widget.AppEditText
            android:id="@+id/et_login_pass"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="43dp"
            android:hint="@string/pm_login_password"
            android:paddingLeft="10dp"
            android:textColor="@color/app_white"
            android:inputType="textWebPassword"
            android:textColorHint="@color/app_white"
            android:imeOptions="actionDone"
            android:background="@drawable/login_edittext_style_bottom"/>
    </RelativeLayout>
    <Button
        android:id="@+id/bt_register"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:gravity="center"
        android:background="@drawable/login_bottom"
        android:text="@string/pm_login"
        android:textSize="17sp"
        android:textColor="@color/app_white"
        android:enabled="false"/>
</LinearLayout>